Shang New Live/src/objects/App_Setting__c.object
<CustomObject>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greetings_Description__c</fullName>
        <inlineHelpText>This is the Greetings to display at Main Page.</inlineHelpText>
        <label>Greetings Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_Background__c</fullName>
        <formula>IF( ISBLANK(  URL_Background__c  ) ,&quot;&quot;, IMAGE(URL_Background__c , &quot;Satisfied&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Background</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Satisfied__c</fullName>
        <formula>IF( ISBLANK(  URL_Image_Satisfied__c ) ,&quot;&quot;, IMAGE(URL_Image_Satisfied__c  , &quot;Satisfied&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Satisfied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Unsatisfied__c</fullName>
        <formula>IF( ISBLANK( URL_Image_Unsatisfied__c ) ,&quot;&quot;, IMAGE(URL_Image_Unsatisfied__c, &quot;Icon&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Unsatisfied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Options__c</fullName>
        <label>No. of Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>App Setting</relationshipLabel>
        <relationshipName>App_Setting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Description__c</fullName>
        <description>This is to key information about rating at Main Page.</description>
        <inlineHelpText>This is to key information about rating at Main Page.</inlineHelpText>
        <label>Rating Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_Option_Description__c</fullName>
        <label>Resolved Option Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satisfied_Text__c</fullName>
        <label>Satisfied Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Select_Option_Description__c</fullName>
        <description>This is the information to display at option submission page.</description>
        <inlineHelpText>This is the information to display at option submission page.</inlineHelpText>
        <label>Select Option Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Thank_you_Description__c</fullName>
        <label>Thank you Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL_Background__c</fullName>
        <label>URL Background</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Image_Satisfied__c</fullName>
        <label>URL Image Satisfied</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Image_Unsatisfied__c</fullName>
        <label>URL Image Unsatisfied</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unsatisfied_Text__c</fullName>
        <label>Unsatisfied Text</label>
        <type>TextArea</type>
    </fields>
    <label>App Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-AS-{000000}</displayFormat>
        <label>App Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>